--- a/manifest.json
+++ b/manifest.json
@@ -4,6 +4,11 @@
   "version": "1.0.0",
   "description": "__MSG_extDescription__",
   "default_locale": "es",
+  "icons": {
+    "16": "icons/icon16.png",
+    "48": "icons/icon48.png",
+    "128": "icons/icon128.png"
+  },
   "permissions": [
     "activeTab",
     "storage",
@@ -15,7 +20,12 @@
     "http://*/*"
   ],
   "action": {
-    "default_popup": "popup.html"
+    "default_popup": "popup.html",
+    "default_icon": {
+      "16": "icons/icon16.png",
+      "48": "icons/icon48.png",
+      "128": "icons/icon128.png"
+    }
   },
   "content_scripts": [
     {
